--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kwame Asante</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-
     <header>
         <a href="javascript:void()" class="logo">kwame codes</a>
         <ul>
@@ -18,6 +20,25 @@
             <li><a href="#">Resume</a></li>
         </ul>
     </header>
+
+    <section  class="nice">
+        <div class="container bg-light">
+            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio non, vero optio placeat ad voluptate earum quas! Ducimus, tempora libero, vero amet suscipit quis ipsam omnis maxime quidem, quia iure? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore, quasi autem blanditiis ducimus vitae reiciendis ad harum dolores modi, amet quos. Impedit minima quidem voluptatem dolor nihil, libero temporibus et!</p>
+        </div>
+    </section>
+
+    <section>
+        <div class="container bg-primary">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, dicta nihil, praesentium molestiae id accusamus, facere laudantium autem laboriosam temporibus tenetur? Soluta ipsum modi fugiat iure alias vitae aut repudiandae.
+        </div>
+    </section>
     
+    
+    <script type="text/javascript">
+        window.addEventListener("scroll", function(){
+            var header = document.querySelector("header");
+            header.classList.toggle("sticky",window.scrollY > 0);
+        })
+    </script>
 </body>
 </html>
