--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 </head>
 <body>
-    <header>
-        <a href="javascript:void()" class="logo">kwame codes</a>
+    <header >
+        <a href="javascript:void()" class="logo">{ kc }</a>
         <ul>
             <li><a href="#">About</a> </li>
             <li><a href="#">Experience</a></li>
@@ -22,14 +22,17 @@
     </header>
 
     <section  class="nice">
-        <div class="container bg-light">
-            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio non, vero optio placeat ad voluptate earum quas! Ducimus, tempora libero, vero amet suscipit quis ipsam omnis maxime quidem, quia iure? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore, quasi autem blanditiis ducimus vitae reiciendis ad harum dolores modi, amet quos. Impedit minima quidem voluptatem dolor nihil, libero temporibus et!</p>
+        <div class="container ">
+            <h5>Hi, my name is</h5>
+            <h2 class="name">Kertice Asante</h2>
+            <h4 class="headline">I create things for the web</h4>
+            <p class="text-muted intro " >Im a software engineer living in Accra, Ghana builing applications to solve  problems with  the aim of making the world a better place.</p>
         </div>
     </section>
 
     <section>
         <div class="container bg-primary">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, dicta nihil, praesentium molestiae id accusamus, facere laudantium autem laboriosam temporibus tenetur? Soluta ipsum modi fugiat iure alias vitae aut repudiandae.
+           
         </div>
     </section>
     
