--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <header >
         <a href="javascript:void()" class="logo">{ kc }</a>
         <ul>
-            <li><a href="#">About</a> </li>
-            <li><a href="#">Experience</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Resume</a></li>
+            <li class="links"><a href="#">About</a> </li>
+            <li class="links"><a href="#">Experience</a></li>
+            <li class="links"><a href="#">Projects</a></li>
+            <li class="links"><a href="#">Contact</a></li>
+            <li ><button  class="btn btn-outline-primary">Resume</button></li>
         </ul>
     </header>
 
@@ -26,7 +26,9 @@
             <h5>Hi, my name is</h5>
             <h2 class="name">Kertice Asante</h2>
             <h4 class="headline">I create things for the web</h4>
-            <p class="text-muted intro " >Im a software engineer living in Accra, Ghana builing applications to solve  problems with  the aim of making the world a better place.</p>
+            <p class=" intro  mb-3" >Im a software engineer living in Accra, Ghana builing applications to solve  problems with  the aim of making the world a better place.</p>
+            
+            <button  class="btn btn-outline-primary">Connect with me</button>
         </div>
     </section>
 
